# rnbo.maxapi.getset

./: .gitignore  .gitmodules  Build.sh  CMakeLists.txt  README.md  rnbo-maxapi-getset-patcher.maxpat  rnbo-maxapi-test-patcher.maxpat
Source/: rnbo.maxapi.getset.cpp  rnbo.maxapi.getset.h  rnbo.maxapi.test.cpp  rnbo.maxapi.test.h
